--- a/style/style.css
+++ b/style/style.css
@@ -156,4 +156,22 @@ main,
     width: 100%;
 }
 
+
+@media screen and (max-width:576px) {
+    .banner{
+        flex-direction: column-reverse;
+        margin: 20px 16px;
+    }
+    .banner-text-container-title{
+        font-size: 2rem;
+    }
+    .banner-text-container-description{
+        font-size: 0.81rem;
+    }
+
+    .btn-primary{
+        font-size: 1rem;
+    }
+}
+
 /* bannner section code end here */
