--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ section,
 }
 
 main{
-    background-image:url("../assets/bg.png"), linear-gradient(white, rgb(217, 226,203));
+    background-image:url("../assets/bg.png"), linear-gradient(white, white, #eca01d70);
     background-repeat:repeat;
     background-size: cover;
     width: 100%;
@@ -309,6 +309,7 @@ main{
     font-size: 20px;
     margin-top:50px;
     margin-right: 10px;
+    cursor: pointer;
     
 }
 
@@ -335,5 +336,119 @@ main{
 }
 
 /* curriculum section code end here */
+
+
+/* story section code stat here */
+.story-section{
+    text-align: center;
+    padding-bottom: 70px;
+}
+.story-section-title{
+    font-size: 2.86rem;
+    font-weight: bold;
+    margin-bottom: 80px;
+}
+
+.story-section-btn{
+    background-color:#F0AA00;
+    letter-spacing:1.5px;
+    border:none;
+    padding:15px 50px;
+    border-radius: 5px;
+    color: aliceblue;
+    margin-top: 50px;
+    border: 2px solid #F0AA00;
+}
+
+.story-section-btn:hover{
+    background: none;
+    transition: 0.3s;
+    border: 2px solid palevioletred;
+    color: black;
+}
+.story-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+}
+
+.story-container-one{
+    background-color: #fff;
+    border-radius: 20px;
+    width: 33.75rem;
+}
+
+.story-container-one:hover{
+    box-shadow: 5px 5px 5px black;
+    transition: 0.3s;
+}
+
+.story-container-one-btn{
+    background-color:#F0AA00;
+    border:none;
+    padding:7px 10px;
+    border-radius: 5px;
+    color: aliceblue;
+    position: relative;
+    top: -20px;
+}
+
+.story-container-one-title{
+    font-size:1.5rem;
+    font-weight: bold;
+    padding:20px;
+}
+
+.story-container-one-description{
+    font-size: 0.8rem;
+    color:#666666;
+    margin: 30px 20px;
+}
+
+.story-container-one-img > img{
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius:20px;
+}
+
+.story-container-two{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 25px;
+}
+
+.story-container-two-single{
+    background-color: aliceblue;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.story-container-two-single:hover{
+    box-shadow: 5px 5px 5px black;
+    transition: 0.3s;
+}
+
+.story-container-two-img > img{
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.story-container-two-btn{
+    background-color:#F0AA00;
+    border:none;
+    padding:7px 10px;
+    border-radius: 5px;
+    color: aliceblue;
+    position: relative;
+    top: -20px;
+}
+
+.story-container-two-title{
+    font-size: 0.7rem;
+}
+
+
+
+/* story section code end here */
 
 
