--- a/style/style.css
+++ b/style/style.css
@@ -270,7 +270,7 @@ main{
 }
 
 .curriculum-single-card{
-    padding:50px 30px 0px 30px;
+    padding:50px 30px 20px 30px;
     border-radius: 20px;
 }
 
@@ -447,8 +447,28 @@ main{
     font-size: 0.7rem;
 }
 
+@media screen and (max-width:576px) {
+    .story-section{
+        margin-top: -80px;
+    }
+    .story-container-one{
+        display: none;
+    }
+
+    .story-container-two{
+        margin: 0px 20px;
+    }
+    .story-container-two-single{
+        max-width: 200px;
+    }
+    .story-container-two-img{
+        max-width: 200px;
+    }
+    .story-container-two-img > img{
+        width: 100%;
+    }
+
+}
 
 
 /* story section code end here */
-
-
