--- a/style/style.css
+++ b/style/style.css
@@ -273,6 +273,7 @@ main{
 .curriculum-single-card{
     padding:50px 30px 20px 30px;
     border-radius: 20px;
+    border: 1px solid rgb(240, 235, 235);
 }
 
 .curriculum-single-card:hover{
@@ -342,6 +343,7 @@ main{
     .curriculum-icon{
         display: none;
     }
+
 }
 
 /* curriculum section code end here */
